# nhlStat

./: .gitignore  main.py  nhl-2-cleanData.py  nhl-6-penalties-after-goals.py  nhl.ipynb  pyproject.toml  readme.md
nhlStat/: .env  __main__.py
nhlStat/analysis/: nhl-5-one-game-an.py  nhl-allgames.py  nhl-emptyNets.py  nhl-giveaways.py  nhl_analysis.py
nhlStat/utils/: config.py  nhl-5-PlayReview.py  nhl-6-penalty.py  nhl-allgames.ipynb  nhl-goal-an.ipynb  nhl-teams.ipynb  nhl_cleanup.py  nhl_data_utils.py
src/nhlStat/: config.py
src/nhlStat/utils/: nhl-5-plays-shots-on-goal.py  nhl-gameplays-an.py  nhl-teams-an.ipynb  nhl_data_utils.py
utils/: nhl-1-getData.py  nhl-giveaways.ipynb  nhl-one_game_an.ipynb
